# alembic-views

./: .gitignore  LICENSE.txt  pyproject.toml
.github/workflows/: python.yaml
alembic_views/: __init__.py  autogenerate.py  operations.py
